# cerberus-ct

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml
.cerberus/: demo-state.json  demo-webhook-state.json  state.json
.github/workflows/: ci.yml  release.yml  takeover-fingerprints.yml
crates/cerberus-cli/: Cargo.toml
crates/cerberus-cli/src/: cli.rs  display.rs  main.rs
crates/cerberus-cli/src/commands/: enrichment.rs  fetch_checkpoint.rs  fetch_events.rs  fetch_tile.rs  mod.rs  scan_ct.rs  scan_domain.rs  validate_config.rs  watch.rs  watch_ct.rs  webhook.rs
crates/cerberus-core/: Cargo.toml
crates/cerberus-core/data/: homoglyphs.json  takeover_fingerprints.json
crates/cerberus-core/src/: alert.rs  config.rs  error.rs  event.rs  finding.rs  lib.rs
crates/cerberus-core/src/cert/: mod.rs  parser.rs  types.rs
crates/cerberus-core/src/ct/: log_list.rs  mock.rs  mod.rs  rfc6962.rs  source.rs  types.rs
crates/cerberus-core/src/ct/static_ct/: checkpoint.rs  client.rs  decoder.rs  merkle.rs  mod.rs  source.rs  tiles.rs
crates/cerberus-core/src/detect/: brand.rs  composition.rs  detector.rs  engine.rs  homoglyph.rs  keyword.rs  mod.rs  typosquat.rs
crates/cerberus-core/src/dns/: cname.rs  fingerprints.rs  mod.rs  resolver.rs  takeover.rs
crates/cerberus-core/src/domain/: mod.rs  normalize.rs  types.rs
crates/cerberus-core/src/output/: json.rs  mod.rs  sink.rs  slack.rs  webhook.rs
crates/cerberus-core/src/score/: mod.rs  scorer.rs  severity.rs
crates/cerberus-core/src/state/: checkpoint_store.rs  dedupe.rs  mod.rs
crates/cerberus-core/tests/: certificate_parser.rs  detection_pipeline.rs  rule_quality.rs  static_ct_checkpoint.rs  static_ct_decoder.rs  static_ct_tiles.rs  subdomain_takeover.rs  watch_ct_state.rs
crates/cerberus-core/tests/fixtures/: san_cert.der  san_cert.pem
data/: homoglyphs.json  takeover_fingerprints.json
docs/: architecture.md  detection_model.md  limitations.md  usage.md
docs/demo/: README.md  cerberus-demo.cast  sample-alert-summary.json
examples/: basic_config.yaml  basic_monitor.rs  demo_config.yaml  mock_events.jsonl  rules_config.yaml  state.example.json  webhook_receiver.py
scripts/: render_demo_gif.py  update_takeover_fingerprints.ps1
tests/fixtures/: config.yaml  suspicious_domains.txt
