[package]
name = "cerberus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line interface for Cerberus"

[[bin]]
name = "cerberus"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
cerberus-core = { path = "../cerberus-core" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
