[package]
name = "cerberus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Command-line interface for Cerberus"

[[bin]]
name = "cerberus"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
cerberus-core = { path = "../cerberus-core", version = "1.1.0" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
