[package]
name = "cerberus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core detection engine for Cerberus"

[dependencies]
reqwest.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
x509-parser.workspace = true
hickory-resolver.workspace = true
