[package]
name = "cerberus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Core detection engine for Cerberus"

[dependencies]
reqwest.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
unicode-security.workspace = true
x509-parser.workspace = true
hickory-resolver.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
fs2.workspace = true
futures.workspace = true
hex.workspace = true
idna.workspace = true
psl.workspace = true
ring.workspace = true
sha2.workspace = true
url.workspace = true
yaml_serde.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true
